--- a/requirements.txt
+++ b/requirements.txt
@@ -12,10 +12,12 @@ coreschema==0.0.4
 coverage==6.3.2
 crypto==1.4.1
 cryptography==39.0.0
+ci
 
 dj-database-url==0.5.0
 dj-rest-auth==2.2.4
 Django==4.1.4
+django
 django-appconf==1.0.5
 django-celery-beat==2.4.0
 django-celery-email==3.0.0
@@ -45,6 +47,9 @@ djoser==2.1.0
 dnspython==2.2.1
 drf-firebase-auth==1.0.0
 drf-nested-routers==0.93.4
+django-crispy-forms
+
+Pillow
 
 frozenlist==1.3.1
 gast==0.4.0
