--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ coreschema==0.0.4
 
 dj-database-url==0.5.0
 dj-rest-auth==2.2.4
-Django==4.1.4
+Django
 django
 django-appconf==1.0.5
 # django-celery-beat==2.4.0
