--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ coreschema==0.0.4
 # ci
 
 dj-database-url==0.5.0
-dj-rest-auth==2.2.4
+# dj-rest-auth==2.2.4
 Django
 django
 django-appconf==1.0.5
@@ -23,10 +23,10 @@ django-appconf==1.0.5
 # django-celery-email==3.0.0
 # django-ckeditor==6.5.1
 # django-cors-headers==3.13.0
-django-crispy-forms==1.14.0
+# django-crispy-forms==1.14.0
 django-dotenv==1.4.2
-django-email-verification==0.1.0
-django-environ==0.9.0
+# django-email-verification==0.1.0
+# django-environ==0.9.0
 django-etc==1.3.1
 # django-extensions==3.1.3
 # django-hitcount==1.3.5
@@ -45,8 +45,8 @@ django-timezone-field==5.0
 # djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 dnspython==2.2.1
-drf-firebase-auth==1.0.0
-drf-nested-routers==0.93.4
+# drf-firebase-auth==1.0.0
+# drf-nested-routers==0.93.4
 django-crispy-forms
 
 Pillow
@@ -60,19 +60,19 @@ Pillow
 # greenlet==2.0.1
 # grpcio==1.44.0
 gunicorn==20.1.0
-h11==0.14.0
-h5py==3.7.0
+# h11==0.14.0
+# h5py==3.7.0
 httpcore==0.16.3
 httplib2==0.20.4
-httpx==0.23.3
+# httpx==0.23.3
 hyperlink==21.0.0
 
 # jedi==0.18.1
 Jinja2==3.1.2
-joblib==1.1.0
+# joblib==1.1.0
 json5==0.9.11
-jsonpickle==3.0.1
-jsonpointer==2.3
+# jsonpickle==3.0.1
+# jsonpointer==2.3
 jsonschema==4.17.3
 
 # kiwisolver==1.3.2
@@ -143,9 +143,9 @@ uri-template==1.2.0
 uritemplate==4.1.1
 urllib3==1.26.14
 validators==0.20.0
-virtualenv==20.13.2
-wasabi==0.10.1
-watchdog==2.2.0
+# virtualenv==20.13.2
+# wasabi==0.10.1
+# watchdog==2.2.0
 wcwidth==0.2.5
 webcolors==1.13
 webencodings==0.5.1
