--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,7 @@
 # confection==0.0.3
 # constantly==15.1.0
 
-coreschema==0.0.4
+# coreschema==0.0.4
 # coverage==6.3.2
 # crypto==1.4.1
 # cryptography==39.0.0
@@ -27,14 +27,14 @@ django-appconf==1.0.5
 django-dotenv==1.4.2
 # django-email-verification==0.1.0
 # django-environ==0.9.0
-django-etc==1.3.1
+# django-etc==1.3.1
 # django-extensions==3.1.3
 # django-hitcount==1.3.5
 # django-jazzmin==2.6.0
 # django-js-asset==2.0.0
 # django-nextjs==2.2.1
 # django-recaptcha==2.0.6
-django-resized==1.0.1
+# django-resized==1.0.1
 # django-rest-framework==0.1.0
 # django-taggit==3.0.0
 django-templated-mail==1.1.1
@@ -43,13 +43,13 @@ django-timezone-field==5.0
 # djangorestframework==3.14.0
 # djangorestframework-jwt==1.11.0
 # djangorestframework-simplejwt==4.8.0
-djoser==2.1.0
-dnspython==2.2.1
+# djoser==2.1.0
+# dnspython==2.2.1
 # drf-firebase-auth==1.0.0
 # drf-nested-routers==0.93.4
 django-crispy-forms
 
-Pillow
+# Pillow
 
 # frozenlist==1.3.1
 # gast==0.4.0
