--- a/requirements.txt
+++ b/requirements.txt
@@ -48,6 +48,7 @@ django-timezone-field==5.0
 # drf-firebase-auth==1.0.0
 # drf-nested-routers==0.93.4
 django-crispy-forms
+crispy-bootstrap4
 
 # Pillow
 
